DTO de Dica e Diagrama Ideal