@@ -1,39 +1,88 @@
 package io.umland.umlandback.controller;
 
 import io.umland.umlandback.domain.Dica;
+import io.umland.umlandback.domain.Fase;
+import io.umland.umlandback.controller.dto.DicaDTO;
 import io.umland.umlandback.repository.DicaRepository;
+import io.umland.umlandback.repository.FaseRepository;
 import org.springframework.http.ResponseEntity;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/dicas")
 class DicaController {
-    private final DicaRepository repository;
-    public DicaController(DicaRepository repository) { this.repository = repository; }
 
+    private final DicaRepository dicaRepository;
+    private final FaseRepository faseRepository;
+
+    public DicaController(DicaRepository dicaRepository, FaseRepository faseRepository) {
+        this.dicaRepository = dicaRepository;
+        this.faseRepository = faseRepository;
+    }
 
     @GetMapping
-    public List<Dica> listar() { return repository.findAll(); }
-    @GetMapping("/id/{id}") public ResponseEntity<Dica> buscar(@PathVariable Long id) { return repository.findById(id).map(ResponseEntity::ok).orElse(ResponseEntity.notFound().build()); }
+    public List<DicaDTO> listar() {
+        return dicaRepository.findAll().stream()
+                .map(DicaDTO::fromEntity)
+                .collect(Collectors.toList());
+    }
+
+    @GetMapping("/id/{id}")
+    public ResponseEntity<DicaDTO> buscar(@PathVariable Long id) {
+        return dicaRepository.findById(id)
+                .map(dica -> ResponseEntity.ok(DicaDTO.fromEntity(dica)))
+                .orElse(ResponseEntity.notFound().build());
+    }
+
     @PostMapping
-    public Dica criar(@RequestBody Dica d) { return repository.save(d); }
-    @PutMapping("/id/{id}") public ResponseEntity<Dica> atualizar(@PathVariable Long id, @RequestBody Dica d) {
-        return repository.findById(id).map(dica -> {
-            dica.setTexto(d.getTexto()); dica.setFase(d.getFase());
-            return ResponseEntity.ok(repository.save(dica));
+    public ResponseEntity<DicaDTO> criar(@RequestBody DicaDTO dto) {
+        return faseRepository.findById(dto.getFaseId())
+                .map(fase -> {
+                    Dica dica = new Dica();
+                    dica.setTexto(dto.getTexto());
+                    dica.setFase(fase);
+                    Dica salvo = dicaRepository.save(dica);
+                    return ResponseEntity.ok(DicaDTO.fromEntity(salvo));
+                })
+                .orElse(ResponseEntity.badRequest().build());
+    }
+
+    @PutMapping("/id/{id}")
+    public ResponseEntity<DicaDTO> atualizar(@PathVariable Long id, @RequestBody DicaDTO dto) {
+        return dicaRepository.findById(id).map(dica -> {
+            dica.setTexto(dto.getTexto());
+
+            if (dto.getFaseId() != null) {
+                Fase fase = faseRepository.findById(dto.getFaseId())
+                        .orElseThrow(() -> new IllegalArgumentException("Fase não encontrada"));
+                dica.setFase(fase);
+            }
+
+            Dica atualizado = dicaRepository.save(dica);
+            return ResponseEntity.ok(DicaDTO.fromEntity(atualizado));
         }).orElse(ResponseEntity.notFound().build());
     }
-    @DeleteMapping("/id/{id}") public ResponseEntity<Object> deletar(@PathVariable Long id) {
-        return repository.findById(id).map(d -> { repository.delete(d); return ResponseEntity.noContent().build(); }).orElse(ResponseEntity.notFound().build());
+
+    @DeleteMapping("/id/{id}")
+    public ResponseEntity<Object> deletar(@PathVariable Long id) {
+        return dicaRepository.findById(id).map(d -> {
+            dicaRepository.delete(d);
+            return ResponseEntity.noContent().build();
+        }).orElse(ResponseEntity.notFound().build());
     }
+
+    // Se quiser expor as 3 dicas aleatórias como DTOs
 //    @GetMapping("/r")
-//    public List<Dica> tresAleatorias() {
-//        List<Dica> todas = repository.findAll();
+//    public List<DicaDTO> tresAleatorias() {
+//        List<Dica> todas = dicaRepository.findAll();
 //        Collections.shuffle(todas);
-//        return todas.stream().limit(3).toList();
+//        return todas.stream()
+//                .limit(3)
+//                .map(DicaDTO::fromEntity)
+//                .collect(Collectors.toList());
 //    }
 }
